--- a/styling/application_style.css
+++ b/styling/application_style.css
@@ -662,11 +662,15 @@ footer.page-footer{
     padding-top: .5rem;
     background-color: var(--color-primary-bg-dark)
 }
-.footer-list-title{
+.footer-list-title a{
     text-transform: uppercase;
     font-weight: 600;
     color: var(--color-title-text);
 }
+.page-footer .accordion {
+
+}
+
 
 .page-footer .accordion,
 .page-footer .accordion .accordion-header {
